--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "sass --watch src/scss:dist/css & live-server",
     "lint": "eslint src/**/*.js",
     "lint-fix": "eslint src/**/*.js --cache --fix",
-    "format": "prettier -w src/**/*.js "
+    "format": "prettier -w src/**/*.js ",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "Noroff",
@@ -17,11 +18,17 @@
     "@eslint/js": "^9.1.1",
     "eslint": "^9.1.0",
     "globals": "^15.0.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "live-server": "^1.2.2",
     "prettier": "^3.2.5",
     "sass": "^1.54.8"
   },
   "dependencies": {
     "bootstrap-dark-5": "^1.1.3"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
