--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint src/**/*.js",
     "lint-fix": "eslint src/**/*.js --cache --fix",
     "format": "prettier -w src/**/*.js ",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "npm run test-unit",
+    "test-unit": "jest"
   },
   "keywords": [],
   "author": "Noroff",
@@ -19,6 +21,7 @@
     "eslint": "^9.1.0",
     "globals": "^15.0.0",
     "husky": "^9.0.11",
+    "jest": "^29.2.0",
     "lint-staged": "^15.2.2",
     "live-server": "^1.2.2",
     "prettier": "^3.2.5",
