--- a/package.json
+++ b/package.json
@@ -19,18 +19,21 @@
   "author": "Noroff",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/preset-env": "^7.19.4",
+    "@babel/core": "^7.24.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.24.1",
+    "@babel/preset-env": "^7.24.4",
     "@eslint/js": "^9.1.1",
     "cypress": "^13.8.0",
-    "eslint": "^9.1.1",
+    "eslint": "^8.57.0",
     "eslint-plugin-cypress": "^3.0.0",
     "eslint-plugin-jest": "^28.2.0",
     "globals": "^15.0.0",
     "husky": "^9.0.11",
     "jest": "^29.2.0",
+    "jest-localstorage-mock": "^2.4.26",
     "lint-staged": "^15.2.2",
     "live-server": "^1.2.2",
+    "node-fetch": "^3.3.2",
     "prettier": "^3.2.5",
     "sass": "^1.54.8"
   },
