--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "@babel/preset-env": "^7.19.4",
     "@eslint/js": "^9.1.1",
     "cypress": "^13.8.0",
-    "eslint": "^8.57.0",
+    "eslint": "^8.0.0",
     "eslint-plugin-cypress": "^3.0.0",
     "eslint-plugin-jest": "^28.2.0",
     "globals": "^15.0.0",
-    "husky": "^9.0.11",
+    "husky": "^8.0.0",
     "jest": "^29.2.0",
     "jest-localstorage-mock": "^2.4.26",
     "lint-staged": "^15.2.2",
@@ -41,15 +41,13 @@
     "bootstrap-dark-5": "^1.1.3"
   },
   "lint-staged": {
-    "*.js": [
-      "prettier --write",
-      "eslint --fix"
-    ],
+    "*.js": "eslint --cache --fix",
     "*.html": [
       "prettier --write"
     ],
     "*.scss": [
       "prettier --write"
-    ]
+    ],
+    "*.{js,css,md}": "prettier --write"
   }
 }
